contrast fixes

--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ code {
 .pageSubtitle {
   font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Arial;
   font-weight: bold;
-  color: grey;
+  color: dimgray;
   font-size: 22px;
   padding-bottom: 0.5rem;
   padding-top: 1rem;
